kubernetes-manifests/kubernetes-dashboard/kubernetes-dashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - https
  routes:
  - kind: Rule
    match: Host(`kubernetes-dashboard`)
    priority: 10
    services:
    - name: kubernetes-dashboard
      namespace: kubernetes-dashboard
      passHostHeader: true
      port: 443
      scheme: https
  tls:
    secretName: k8s-dashboard-tls
